<?xml version="1.0" encoding="utf-8" ?>

<!--
   Copyright 2017-2018 Chronoscope
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
       http://www.apache.org/licenses/LICENSE-2.0
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<resources>
    <string name="app_name">Liftim</string>
    <string name="sync_url">Sync URL(e.g. http://example.com/)</string>
    <string name="ok">OK</string>
    <string name="liftim_code">Class</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="more_actions">More actions</string>
    <string name="delete">Delete</string>
    <string name="type_unspecified">Unspecified</string>
    <string name="type_event">Event</string>
    <string name="type_information">Info</string>
    <string name="type_submission">Assignment</string>
    <string name="type_memo">Note</string>
    <string name="class_schedule">Timetable</string>
    <string name="info_title_timetable">Timetable for %1$s</string>
    <string name="edit">Edit</string>
    <string name="open">Open</string>
    <string name="timetable">Timetable</string>
    <string name="info">Info &amp; Event</string>
    <string name="weekly">Weekly</string>
    <string name="misc">Misc</string>
    <string name="settings">Settings</string>
    <string name="day_of_week_sunday">Sunday</string>
    <string name="day_of_week_monday">Monday</string>
    <string name="day_of_week_tuesday">Tuesday</string>
    <string name="day_of_week_wednesday">Wednesday</string>
    <string name="day_of_week_thursday">Thursday</string>
    <string name="day_of_week_friday">Friday</string>
    <string name="day_of_week_saturday">Saturday</string>
    <string name="loading_data">Loading data…</string>
    <string name="token_load_failed_description">Failed to certificate app. Please retry again.</string>
    <string name="retry">Retry</string>
    <string name="initial_sync_failed_description">Failed to load account data. Tap [RETRY] to try sync again.</string>
    <string name="liftim_code_chooser_description">Choose class you want to go or join class</string>
    <string name="join_class">Join class</string>
    <string name="timetable_placehoder_message">There is no timetable</string>
    <string name="done">Done</string>
    <string name="archive">Archive</string>
    <string name="account">Account</string>
    <string name="manage_account">Manage account</string>
    <string name="manage_liftim_code">Manage classes</string>
    <string name="app_info">App info</string>
    <string name="open_source_license">Open source licenses</string>
    <string name="general">General</string>
    <string name="join_class_description">Join class with invitation number</string>
    <string name="invitation_number">Invitation number</string>
    <string name="incorrect_invitation_number">Invitation number is incorrect</string>
    <string name="join_progress">Requesting to join the class…</string>
    <string name="create_liftim_code">Create class</string>
    <string name="add_info">Add info or event</string>
    <string name="edit_timetable">Edit timetable</string>
    <string name="edit_weekly">Edit weekly timetable</string>
    <string name="timetable_info">Info</string>
    <string name="move_item">Move item</string>
    <string name="register_local">Register locally</string>
    <string name="share_class">Share with classmate</string>
    <string name="subject">Subject</string>
    <string name="detail">Detail</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="specify_date">Specify date</string>
    <string name="specify_time">Specify time</string>
    <string name="allow_hide_info">Allow user to hide</string>
    <string name="importance">Importance</string>
    <string name="form_error_info">Please specify title</string>
    <string name="liftim_acronym" translatable="false">Liftim is functional timetable manager</string>
    <string name="open_source_statement">Liftim for Android is developed under open source license and the source code is available on GitHub.\nIf you want to contribute to Liftim, please send us pull requests or paches!</string>
    <string name="open_project_page">Open project page</string>
    <string name="login">Sign in</string>
    <string name="login_error_description">Unable to login to Liftim because login info is old. Please certificate again.</string>
    <string name="link_url">Link URL</string>
    <string name="open_link">Open link</string>
    <string name="login_message">To use Liftim, please login. By logging in, you can get a space to share timetable or information with your classmates.</string>
    <string name="login_message_extra">If you don\'t have account, we\'ll create account for you automatically.</string>
    <string name="change_min_index">Change class start time</string>
    <string name="accessibility_increase">Increase</string>
    <string name="accessibility_decrease">Decrease</string>
    <string name="not_implemented_message">Sorry. This function is currently not unavailable  Please wait until next version released</string>
    <string name="join_with_barcode">Join with QR Code</string>
    <string name="barcode_not_found">No valid QR code found</string>
    <string name="logout">Logout</string>
    <string name="logout_warning">By logging out, you\'ll have lost all data you registered locally.</string>
    <string name="no_joined_class">You don\'t join any class.</string>
    <string name="accessibility_back">Back</string>
    <string name="delete_liftim_code_warning">You\'ll lose read permission for this class</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="accessibility_change_liftim_code_image">Change image for this class</string>
    <string name="edit_subject_list">Edit subject list</string>
    <string name="delete_liftim_code_manager">Delete this class</string>
    <string name="subject_name">Subject name</string>
    <string name="subject_short_name">Subject short name</string>
    <string name="edit_subject">Edit subject</string>
    <string name="edit_existing_timetable">Edit existing timetable</string>
    <string name="add_new_timetable">Add new timetable</string>
    <string name="select_target">Select a target</string>
    <string name="login_failed">Unable to login</string>
    <string name="notification_login_content">Tap here to login to liftim again</string>
    <string name="liftim_code_deleted_title">Previously selected class has deleted</string>
    <string name="liftim_code_deleted_content">Please check which class you are now</string>
    <string name="confirm_title">Are you sure?</string>
    <string name="manager_delete_liftim_code_warning">This action cannot be undone. This will delete following class including data stored in the class permanently.</string>
    <string name="liftim_code_delete_medium">Swipe downward to confirm deletion</string>
    <string name="send">Send</string>
    <string name="feedback_empty_message">Your feedback is seemed to be empty. Please write your feedback.</string>
    <string name="add_subject">Add subject</string>
    <string name="start_index">Start</string>
    <string name="info_placeholder_text">There\'s no info or event</string>
    <string name="restore">Restore</string>
    <string name="specify_date_time">Pick date time</string>
    <string name="not_specified">Not specified</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="unset">Unset</string>
    <string name="add_link_url">Add link URL</string>
    <string name="register_button">Register new one now!</string>
    <string name="function_restriction_only_manager">Only manager for this class can do it. Please ask current manager to grant management privilege.</string>
    <string name="update_account_info">Update account info</string>
    <string name="support_finished">Liftim you are using is no longer supported.</string>
    <string name="server_error">Server has run into critical error.</string>
    <string name="server_maintenance">Server is being maintained. Please wait for a few minutes.</string>
    <string name="liftim_code_exit_failed">Class is not deleted</string>
    <string name="no_connection">No connection.</string>
    <string name="activity_not_found">Your device not support this action.</string>
    <string name="clip_image">Clip an image</string>
    <string name="welcome">Welcome to Liftim</string>
    <string name="get_started">Let\'s get started to set up</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="introduction_wherever">Check or Share timetable no matter where you are</string>
    <string name="introduction_no_forget">There\'s no concern to forget. You can take note in Liftim</string>
    <string name="import_weekly">Import from weekly timetable</string>
    <string name="old_android">Devices older than Android 5.0 is no longer supported. You won\'t receive updates any more.</string>
    <string name="important_notice">Important Notice</string>
    <string name="network_disconnected">Network disconnected</string>
    <string name="network_disconnected_message">Please retry with your phone connected to the Internet.</string>
    <string name="add_more_info">Add more info</string>
    <string name="register_failed">Failed to register. Please try again.</string>
    <string name="item_delete_manager_warning">Item will be deleted parmanently and no one won\'t be able to see it after deleted.</string>
    <string name="delete_failed">Failed to delete info. Please try again.</string>
    <string name="manager_home_notification">You are a manager for this class.</string>
    <string name="invite">Invite</string>
    <string name="barcode">QR Code</string>
    <string name="invitaton_number_deadline">This invitation number will be valid until %1$s</string>
    <string name="invitation_load_fail">Unable to load invitation number</string>
    <string name="join_confirm">Will join Liftim class with following invitation number: %1$s</string>
    <string name="joined">Successfully joined the class.</string>
    <string name="terms_url" translatable="false">https://lifti.me/terms/</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="terms_description">By logging in, you\'ll be regarded as accept the terms of service.</string>
    <string name="notification_time_specified_title">Event will soon begin</string>
    <string name="notification_title">Event in Liftim</string>
    <string name="separater">,</string>
</resources>
