<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2017-2018 Chronoscope
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
       http://www.apache.org/licenses/LICENSE-2.0
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_timetable"
            android:icon="@drawable/ic_home"
            android:title="@string/timetable" />
        <item
            android:id="@+id/drawer_info"
            android:icon="@drawable/ic_event_note"
            android:title="@string/info" />
        <item
            android:id="@+id/drawer_weekly"
            android:icon="@drawable/ic_weekly"
            android:title="@string/weekly" />
        <item
            android:id="@+id/drawer_archive"
            android:icon="@drawable/ic_archive"
            android:title="@string/archive" />
        <item android:title="@string/misc">
            <menu>
                <item
                    android:id="@+id/drawer_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
            </menu>
        </item>
    </group>
</menu>
