<?xml version="1.0" encoding="utf-8"?>

<!--
   Copyright 2017-2018 Chronoscope
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
       http://www.apache.org/licenses/LICENSE-2.0
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/index_horiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="5dp"
        android:orientation="horizontal"
        tools:ignore="UnusedAttribute">

        <View
            android:layout_width="30sp"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="120sp"
            android:layout_height="30sp"
            android:background="@color/zebra_light"
            android:gravity="center"
            android:text="@string/day_of_week_sunday"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:layout_width="120sp"
            android:layout_height="30sp"
            android:background="@color/zebra_dark"
            android:gravity="center"
            android:text="@string/day_of_week_monday"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="120sp"
            android:layout_height="30sp"
            android:background="@color/zebra_light"
            android:gravity="center"
            android:text="@string/day_of_week_tuesday"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="120sp"
            android:layout_height="30sp"
            android:background="@color/zebra_dark"
            android:gravity="center"
            android:text="@string/day_of_week_wednesday"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="120sp"
            android:layout_height="30sp"
            android:background="@color/zebra_light"
            android:gravity="center"
            android:text="@string/day_of_week_thursday"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="120sp"
            android:layout_height="30sp"
            android:background="@color/zebra_dark"
            android:gravity="center"
            android:text="@string/day_of_week_friday"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="120sp"
            android:layout_height="30sp"
            android:background="@color/zebra_light"
            android:gravity="center"
            android:text="@string/day_of_week_saturday"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/holo_blue_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/index_vert"
            android:layout_width="30sp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:elevation="3dp"
            android:orientation="vertical"
            tools:ignore="UnusedAttribute" />

        <com.chronoscoper.android.classschedule2.view.ObservableScrollView
            android:id="@+id/grid_horizontal_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:clipToPadding="false"
                android:paddingBottom="100dp"
                app:spanCount="7" />
        </com.chronoscoper.android.classschedule2.view.ObservableScrollView>
    </LinearLayout>
</LinearLayout>
